# zulip

./: -f  .babelrc  .browserslistrc  .codecov.yml  .codespellignore  .codespellignorewords  .coveralls.yml  .devcontainer-lock.json  .devcontainer.json  .dockerignore  .editorconfig  .eslintignore  .eslintrc  .eslintrc-no-magic-numbers  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .gitlint  .isort.cfg  .mailmap  .npmrc  .prettierignore  .pyre_configuration  .readthedocs.yaml  .sonarcloud.properties  .stylelintrc  .stylelintrc.json  .travis.yml  .trigger === search  .yarnrc  .zulip-vagrant-config  0521_message_is_deleted.py  0522_message_date_deleted_history_and_more.py  0523_archivedmessage_date_deleted_history_and_more.py  0524_alter_archivedmessage_date_deleted_history_and_more.py  ADVANCED_BOTS.md  AGENTS.md  CODE_OF_CONDUCT.md  (+119 more)
.circleci/: config.yml
.claude/: CLAUDE.md  settings.json  settings.local.json
.github/: FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  build.yml  copilot-instructions.md  dependabot.yml  funding.json  issue_template.md  pull_request_template.md
.tx/: config
CSS_EXAMPLES/: background.css  border.css  color.css  cursor.css  display_none.css  font_size.css  font_type.css  foo.css  other.css  text_formatting.css  transition.css  width.css  z_index.css
a2/: models.py  urls.py  views.py
analytics/: models.py  urls.py  views.py
api/: MANIFEST.in  README  README.md  check-mirroring  common.py  flask_bot_server.py  gcal-bot  humbug.py  humbug_trac.py  mit_subs_list.py  setup.cfg  setup.py  zephyr_mirror.py
api_docs/: api-doc-template.md  api-keys.md  changelog.md  client-libraries.md  configuring-python-bindings.md  construct-narrow.md  create-bot.md  create-or-update-scheduled-messages.md  create-realm-domain.md  create-reminder.md  create-scheduled-message.md  create-stream.md  delete-message-edit-history-content-revisions.md  delete-message-history.md  delete-realm-domain.md  delete-user-avatar.md  deploying-bots.md  get-bots.md  group-setting-values.md  http-headers.md  incoming-webhooks-overview.md  incoming-webhooks-walkthrough.md  index.md  installation-instructions.md  integrations-overview.md  interactive-bots-api.md  mark-all-as-read.md  message-formatting.md  miatsu-changelog.md  missing.md  mobile-notifications.md  non-webhook-integrations.md  openapi.md  outgoing-webhook-payload.md  outgoing-webhooks.md  patch-realm-domain.md  real-time-events.md  remove-own-profile-data.md  removeOwnProfileData.md  rest-error-handling.md  (+12 more)
assets/: README
bots/: check-mirroring  check-rabbitmq-consumers  check-rabbitmq-queue  check_send_receive.py  cron_file_helper.py  feedback-bot  gcal-bot  githook-post-receive  humbug_git_config.py  humbug_trac.py  humbug_trac_config.py  irc-mirror.py  jabber_mirror.py  jabber_mirror_backend.py  log2zulip  process_ccache  rabbitmq-numconsumners-crontab  rabbitmq-queuesize-crontab  send-nagios-notification  summarize_stream.py  sync-public-streams  tddium-notify-humbug  twitter-bot.py  zephyr_mirror.py  zephyr_mirror_backend.py  zmirror-renew-kerberos  zmirror_private.conf.template  zulip_git_config.py  zulip_trac_config.py
certs/: api.zulip.com.combined-chain.crt  api.zulip.com.crt  app.humbughq.com.combined-chain.crt  dev.humbughq.com.combined-chain.crt  staging.humbughq.com.combined-chain.crt  staging.humbughq.com.crt  staging.zulip.com.combined-chain.crt  staging.zulip.com.crt  trac.humbughq.com.crt  wildcard-e.humbughq.com.crt  wildcard-humbughq.com.combined-chain.crt  www.humbughq.com.combined-chain.crt  www.humbughq.com.crt  www.zulip.com.crt  zephyr.humbughq.com.combined-chain.crt  zephyr.humbughq.com.crt  zephyr.zulip.com.combined-chain.crt  zephyr.zulip.com.crt
confirmation/: CHANGELOG.txt  INSTALL.txt  LICENSE.txt  README.txt  __init__.py  admin.py  models.py  settings.py  setup.py  urls.py  util.py  views.py
contrib_bots/: .zuliprc-local  bot_lib.py  bots_test_lib.py  run.py  test-bots  test_bots.py
corporate/: landing.py  models.py  terms.md  urls.py  views.py
docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
docs/: .gitignore  .readthedocs.yaml  Makefile  README.md  THIRDPARTY  accessibility.md  analytics.md  api-release-checklist.md  architecture-overview.md  architecture-overview.rst  bots-guide.md  brief-install-vagrant-dev.md  bug-reports.md  changelog.md  chat-zulip-org.md  chinese.md  client.md  code-contribution-checklist.rst  code-of-conduct.md  code-reviewing.md  code-style.md  code-style.rst  conf.py  conversion.md  custom-apps.md  dependencies.md  dev-env-first-time-contributors.md  dev-overview.md  dev-remote.md  dev-setup-non-vagrant.md  directory-structure.md  directory-structure.rst  email.md  emoji.md  events-system.md  expensive-migrations.md  fixing-commits.md  french.md  front-end-build-process.md  front-end-build-process.rst  (+96 more)
frontend_tests/: .eslintrc.json  .gitignore  common.js  run  run-casper
help/: add-a-bot-or-integration.md  add-a-custom-linkifier.md  add-or-remove-users-from-a-channel.md  add-or-remove-users-from-a-stream.md  all-messages.md  allow-image-link-previews.md  analytics.md  animated-gifs-from-giphy.md  archive-a-channel.md  archive-a-stream.md  bots-and-integrations.md  bots-overview.md  browse-and-subscribe-to-channels.md  browse-and-subscribe-to-streams.md  bulleted-and-numbered-lists.md  bulleted-lists.md  change-a-users-name.md  change-a-users-role.md  change-organization-url.md  change-the-channel-description.md  change-the-color-of-a-channel.md  change-the-color-of-a-stream.md  change-the-privacy-of-a-channel.md  change-the-privacy-of-a-stream.md  change-the-stream-description.md  change-the-time-format.md  change-your-email-address.md  change-your-language.md  change-your-name.md  change-your-password.md  change-your-profile-picture.md  change-your-timezone.md  channel-feed.md  channel-folders.md  channel-notifications.md  channel-permissions.md  channel-posting-policy.md  code-blocks.md  (+259 more)
help-beta/: .gitignore  README.md  astro.config.mjs  package.json  tsconfig.json
(+20229 files in other folders)
